<resources>
    <string name="app_name">MineGuard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <!-- Statistics strings -->
    <string name="statistics_title">数据统计</string>
    <string name="today_overview">今日概览</string>
    <string name="total_alarms">报警总数</string>
    <string name="processed_alarms">已处理数</string>
    <string name="total_devices">设备总数</string>
    <string name="online_devices">在线设备数</string>
    <string name="alarm_trends">报警趋势</string>
    <string name="scene_statistics">场景报警统计</string>
    <string name="device_statistics">设备报警统计</string>
    <string name="type_statistics">报警类型统计</string>
    
    <!-- Time span options -->
    <string name="time_one_hour">1小时</string>
    <string name="time_one_week">1周</string>
    <string name="time_one_month">1月</string>
    <string name="time_one_year">1年</string>
    
    <!-- Profile strings -->
    <string name="account_management">账户管理</string>
    <string name="bind_phone">绑定/换绑手机号</string>
    <string name="user_guide">使用说明</string>
    <string name="privacy_policy">第三方信息收集说明</string>
    <string name="about">关于我们</string>
    <string name="change_avatar">更换头像</string>
    <string name="account_management_hint">管理个人信息和账户设置</string>
    <string name="bind_phone_hint">绑定或更换手机号码</string>
    <string name="user_guide_hint">查看应用使用说明</string>
    <string name="privacy_policy_hint">了解隐私政策</string>
    <string name="about_hint">了解MineGuard</string>
</resources>
